// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`docs creates a description for operations if not present 1`] = `
"/**
 * Makes a GET request to the 'my/Api' endpoint and returns a 'string'
 * 
 * @returns string
 */"
`;

exports[`docs creates documentation for the api 1`] = `
"/**
 * Representation of the 'TestApi'.
 * This API is part of the 'TestService' service.
 */"
`;

exports[`docs creates documentation with body parameter 1`] = `
"/**
 * Makes a GET request to the 'my/Api' endpoint and returns a 'string'
 * 
 * @param body Request body
 * @returns string
 */"
`;

exports[`docs creates documentation with path parameters 1`] = `
"/**
 * Makes a GET request to the 'my/Api' endpoint and returns a 'string'
 * 
 * @param pathParameter1 Path parameter with the original name undefined
 * @param pathParameter2 Path parameter with the original name undefined
 * @returns string
 */"
`;

exports[`docs creates documentation with query parameters object 1`] = `
"/**
 * Makes a GET request to the 'my/Api' endpoint and returns a 'string'
 * 
 * @param queryParameters Object containing the query parameters.
 * @returns string
 */"
`;

exports[`docs creates schema documentation 1`] = `
"/**
 * Representation of the 'mySchema' schema
 */"
`;
